--- a/certs.html
+++ b/certs.html
@@ -8,7 +8,7 @@
     <title>My Certifications</title>
      <style>   
         body {
-         background-color: grey;
+         background-color: tan;
         }
      </style>
 </head>
@@ -61,7 +61,7 @@
     <div data-iframe-width="150" data-iframe-height="270" data-share-badge-id="52c3e850-182f-4a81-b65f-1bf8ce97f95b" data-share-badge-host="https://www.credly.com"></div>
     <script type="text/javascript" async src="//cdn.credly.com/assets/utilities/embed.js"></script>
 
-        
+    
    
    <!-- Images
   
