--- a/blog.html
+++ b/blog.html
@@ -9,9 +9,20 @@
 
     <style>   
         body {
-         background-color:  grey;
+         background-color:   tan;
         }
      </style>
+</head>
+
+
+<!--<head>
+   <title>Irene's Portfolio</title>
+   <meta charset="utf-8" />
+   <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+  <link rel="stylesheet" href="assets/css/main.css" />
+    <noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
+</head>-->
+
 <body>
     
     <p>  Ibowers18.github.io</p>
